--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -7,8 +7,9 @@ file.reference.asistenteCorreo.jar=C:\\Users\\Arnold\\Documents\\NetBeansProject
 file.reference.asistenteCorreo.jar-1=dist\\lib\\asistenteCorreo.jar
 file.reference.bridj-0.6.2-windows-only.jar=C:\\Users\\Arnold\\Documents\\NetBeansProjects\\proyecto_fin\\dist\\lib\\bridj-0.6.2-windows-only.jar
 file.reference.bridj-0.6.2-windows-only.jar-1=dist\\lib\\bridj-0.6.2-windows-only.jar
-file.reference.commons-collections4-4.1.jar=C:\\Users\\Arnold\\Documents\\NetBeansProjects\\proyecto_fin\\dist\\lib\\commons-collections4-4.1.jar
 file.reference.commons-collections4-4.1.jar-1=dist\\lib\\commons-collections4-4.1.jar
+file.reference.commons-collections4-4.4.jar=C:\\Users\\Arnold\\Desktop\\commons-collections4-4.4.jar
+file.reference.commons-compress-1.20.jar=C:\\Users\\Arnold\\Desktop\\commons-compress-1.20.jar
 file.reference.core-3.3.0.jar=C:\\Users\\Arnold\\Documents\\NetBeansProjects\\proyecto_fin\\dist\\lib\\core-3.3.0.jar
 file.reference.core-3.3.0.jar-1=dist\\lib\\core-3.3.0.jar
 file.reference.javase-3.3.0.jar=C:\\Users\\Arnold\\Documents\\NetBeansProjects\\proyecto_fin\\dist\\lib\\javase-3.3.0.jar
@@ -21,11 +22,11 @@ file.reference.log4j-1.2.17.jar=C:\\Users\\Arnold\\Documents\\NetBeansProjects\\
 file.reference.log4j-1.2.17.jar-1=dist\\lib\\log4j-1.2.17.jar
 file.reference.mail-1.5.0-b01.jar=C:\\Users\\Arnold\\Documents\\NetBeansProjects\\proyecto_fin\\dist\\lib\\mail-1.5.0-b01.jar
 file.reference.mail-1.5.0-b01.jar-1=dist\\lib\\mail-1.5.0-b01.jar
-file.reference.poi-3.16.jar=C:\\Users\\Arnold\\Documents\\NetBeansProjects\\proyecto_fin\\dist\\lib\\poi-3.16.jar
 file.reference.poi-3.16.jar-1=dist\\lib\\poi-3.16.jar
-file.reference.poi-ooxml-3.16.jar=C:\\Users\\Arnold\\Documents\\NetBeansProjects\\proyecto_fin\\dist\\lib\\poi-ooxml-3.16.jar
+file.reference.poi-5.0.0.jar=C:\\Users\\Arnold\\Desktop\\poi-5.0.0.jar
 file.reference.poi-ooxml-3.16.jar-1=dist\\lib\\poi-ooxml-3.16.jar
-file.reference.poi-ooxml-schemas-3.16.jar=C:\\Users\\Arnold\\Documents\\NetBeansProjects\\proyecto_fin\\dist\\lib\\poi-ooxml-schemas-3.16.jar
+file.reference.poi-ooxml-5.0.0.jar=C:\\Users\\Arnold\\Desktop\\poi-ooxml-5.0.0.jar
+file.reference.poi-ooxml-full-5.0.0.jar=C:\\Users\\Arnold\\Desktop\\poi-ooxml-full-5.0.0.jar
 file.reference.poi-ooxml-schemas-3.16.jar-1=dist\\lib\\poi-ooxml-schemas-3.16.jar
 file.reference.slf4j-api-1.6.2.jar=C:\\Users\\Arnold\\Documents\\NetBeansProjects\\proyecto_fin\\dist\\lib\\slf4j-api-1.6.2.jar
 file.reference.slf4j-api-1.6.2.jar-1=dist\\lib\\slf4j-api-1.6.2.jar
@@ -35,8 +36,8 @@ file.reference.sqlite-jdbc-3.7.2.jar=C:\\Users\\Arnold\\Documents\\NetBeansProje
 file.reference.sqlite-jdbc-3.7.2.jar-1=dist\\lib\\sqlite-jdbc-3.7.2.jar
 file.reference.webcam-capture-0.3.12.jar=C:\\Users\\Arnold\\Documents\\NetBeansProjects\\proyecto_fin\\dist\\lib\\webcam-capture-0.3.12.jar
 file.reference.webcam-capture-0.3.12.jar-1=dist\\lib\\webcam-capture-0.3.12.jar
-file.reference.xmlbeans-2.6.0.jar=C:\\Users\\Arnold\\Documents\\NetBeansProjects\\proyecto_fin\\dist\\lib\\xmlbeans-2.6.0.jar
 file.reference.xmlbeans-2.6.0.jar-1=dist\\lib\\xmlbeans-2.6.0.jar
+file.reference.xmlbeans-4.0.0.jar=C:\\Users\\Arnold\\Desktop\\xmlbeans-4.0.0.jar
 #Thu May 21 19:38:23 CST 2020
 javadoc.splitindex=true
 build.classes.excludes=**/*.java,**/*.form
@@ -80,21 +81,16 @@ javac.classpath=\
     ${file.reference.AbsoluteLayout.jar}:\
     ${file.reference.asistenteCorreo.jar}:\
     ${file.reference.bridj-0.6.2-windows-only.jar}:\
-    ${file.reference.commons-collections4-4.1.jar}:\
     ${file.reference.core-3.3.0.jar}:\
     ${file.reference.javase-3.3.0.jar}:\
     ${file.reference.junit-4.12.jar}:\
     ${file.reference.libreria_sql.jar}:\
     ${file.reference.log4j-1.2.17.jar}:\
     ${file.reference.mail-1.5.0-b01.jar}:\
-    ${file.reference.poi-3.16.jar}:\
-    ${file.reference.poi-ooxml-3.16.jar}:\
-    ${file.reference.poi-ooxml-schemas-3.16.jar}:\
     ${file.reference.slf4j-api-1.6.2.jar}:\
     ${file.reference.slf4j-log4j12-1.6.2.jar}:\
     ${file.reference.sqlite-jdbc-3.7.2.jar}:\
     ${file.reference.webcam-capture-0.3.12.jar}:\
-    ${file.reference.xmlbeans-2.6.0.jar}:\
     ${file.reference.AbsoluteLayout.jar-1}:\
     ${file.reference.asistenteCorreo.jar-1}:\
     ${file.reference.bridj-0.6.2-windows-only.jar-1}:\
@@ -112,7 +108,13 @@ javac.classpath=\
     ${file.reference.slf4j-log4j12-1.6.2.jar-1}:\
     ${file.reference.sqlite-jdbc-3.7.2.jar-1}:\
     ${file.reference.webcam-capture-0.3.12.jar-1}:\
-    ${file.reference.xmlbeans-2.6.0.jar-1}
+    ${file.reference.xmlbeans-2.6.0.jar-1}:\
+    ${file.reference.commons-collections4-4.4.jar}:\
+    ${file.reference.commons-compress-1.20.jar}:\
+    ${file.reference.poi-5.0.0.jar}:\
+    ${file.reference.poi-ooxml-5.0.0.jar}:\
+    ${file.reference.poi-ooxml-full-5.0.0.jar}:\
+    ${file.reference.xmlbeans-4.0.0.jar}
 javadoc.noindex=false
 annotation.processing.enabled.in.editor=false
 javadoc.private=false
