--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -14,6 +14,7 @@ file.reference.core-3.3.0.jar=C:\\Users\\Arnold\\Documents\\NetBeansProjects\\pr
 file.reference.core-3.3.0.jar-1=dist\\lib\\core-3.3.0.jar
 file.reference.javase-3.3.0.jar=C:\\Users\\Arnold\\Documents\\NetBeansProjects\\proyecto_fin\\dist\\lib\\javase-3.3.0.jar
 file.reference.javase-3.3.0.jar-1=dist\\lib\\javase-3.3.0.jar
+file.reference.jcalendar-1.4.jar=C:\\Users\\Arnold\\Desktop\\jar nuevos\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
 file.reference.junit-4.12.jar=C:\\Users\\Arnold\\Documents\\NetBeansProjects\\proyecto_fin\\dist\\lib\\junit-4.12.jar
 file.reference.junit-4.12.jar-1=dist\\lib\\junit-4.12.jar
 file.reference.libreria_sql.jar=C:\\Users\\Arnold\\Documents\\NetBeansProjects\\proyecto_fin\\dist\\lib\\libreria_sql.jar
@@ -114,7 +115,8 @@ javac.classpath=\
     ${file.reference.poi-5.0.0.jar}:\
     ${file.reference.poi-ooxml-5.0.0.jar}:\
     ${file.reference.poi-ooxml-full-5.0.0.jar}:\
-    ${file.reference.xmlbeans-4.0.0.jar}
+    ${file.reference.xmlbeans-4.0.0.jar}:\
+    ${file.reference.jcalendar-1.4.jar}
 javadoc.noindex=false
 annotation.processing.enabled.in.editor=false
 javadoc.private=false
