no exploto x2 hehehe

--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -15,8 +15,12 @@ file.reference.core-3.3.0.jar-1=dist\\lib\\core-3.3.0.jar
 file.reference.javase-3.3.0.jar=C:\\Users\\Arnold\\Documents\\NetBeansProjects\\proyecto_fin\\dist\\lib\\javase-3.3.0.jar
 file.reference.javase-3.3.0.jar-1=dist\\lib\\javase-3.3.0.jar
 file.reference.jcalendar-1.4.jar=C:\\Users\\Arnold\\Desktop\\jar nuevos\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
+file.reference.jcalendar-1.4.jar-1=C:\\Users\\Sergio\\Desktop\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
+file.reference.jgoodies-common-1.2.0.jar=C:\\Users\\Sergio\\Desktop\\jcalendar-1.4\\lib\\jgoodies-common-1.2.0.jar
+file.reference.jgoodies-looks-2.4.1.jar=C:\\Users\\Sergio\\Desktop\\jcalendar-1.4\\lib\\jgoodies-looks-2.4.1.jar
 file.reference.junit-4.12.jar=C:\\Users\\Arnold\\Documents\\NetBeansProjects\\proyecto_fin\\dist\\lib\\junit-4.12.jar
 file.reference.junit-4.12.jar-1=dist\\lib\\junit-4.12.jar
+file.reference.junit-4.6.jar=C:\\Users\\Sergio\\Desktop\\jcalendar-1.4\\lib\\junit-4.6.jar
 file.reference.libreria_sql.jar=C:\\Users\\Arnold\\Documents\\NetBeansProjects\\proyecto_fin\\dist\\lib\\libreria_sql.jar
 file.reference.libreria_sql.jar-1=dist\\lib\\libreria_sql.jar
 file.reference.log4j-1.2.17.jar=C:\\Users\\Arnold\\Documents\\NetBeansProjects\\proyecto_fin\\dist\\lib\\log4j-1.2.17.jar
@@ -116,7 +120,11 @@ javac.classpath=\
     ${file.reference.poi-ooxml-5.0.0.jar}:\
     ${file.reference.poi-ooxml-full-5.0.0.jar}:\
     ${file.reference.xmlbeans-4.0.0.jar}:\
-    ${file.reference.jcalendar-1.4.jar}
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.jcalendar-1.4.jar-1}:\
+    ${file.reference.jgoodies-common-1.2.0.jar}:\
+    ${file.reference.jgoodies-looks-2.4.1.jar}:\
+    ${file.reference.junit-4.6.jar}
 javadoc.noindex=false
 annotation.processing.enabled.in.editor=false
 javadoc.private=false
