--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,66 +1,29 @@
 application.title=proyecto_fin
 application.vendor=Arnold
 endorsed.classpath=
-file.reference.AbsoluteLayout.jar-1=dist\\lib\\AbsoluteLayout.jar
-file.reference.AbsoluteLayout.jar-2=C:\\Users\\Brenedin Enrique\\Desktop\\Periodo1_2021\\Dise\u00f1oSistemas\\lib\\AbsoluteLayout.jar
-file.reference.asistenteCorreo.jar-1=dist\\lib\\asistenteCorreo.jar
-file.reference.asistenteCorreo.jar-2=C:\\Users\\Brenedin Enrique\\Desktop\\Periodo1_2021\\Dise\u00f1oSistemas\\lib\\asistenteCorreo.jar
-file.reference.bridj-0.6.2-windows-only.jar-1=dist\\lib\\bridj-0.6.2-windows-only.jar
-file.reference.bridj-0.6.2-windows-only.jar-2=C:\\Users\\Brenedin Enrique\\Desktop\\Periodo1_2021\\Dise\u00f1oSistemas\\lib\\bridj-0.6.2-windows-only.jar
-file.reference.commons-collections4-4.1.jar=C:\\Users\\Brenedin Enrique\\Desktop\\Periodo1_2021\\Dise\u00f1oSistemas\\lib\\commons-collections4-4.1.jar
-file.reference.commons-collections4-4.1.jar-1=dist\\lib\\commons-collections4-4.1.jar
-file.reference.commons-collections4-4.1.jar-2=C:\\Users\\Arnold\\Documents\\NetBeansProjects\\proyecto_fin\\dist\\lib\\commons-collections4-4.1.jar
-file.reference.commons-collections4-4.4.jar=C:\\Users\\Arnold\\Desktop\\commons-collections4-4.4.jar
-file.reference.commons-compress-1.20.jar=C:\\Users\\Arnold\\Desktop\\commons-compress-1.20.jar
-file.reference.core-3.3.0.jar-1=dist\\lib\\core-3.3.0.jar
-file.reference.core-3.3.0.jar-2=C:\\Users\\Brenedin Enrique\\Desktop\\Periodo1_2021\\Dise\u00f1oSistemas\\lib\\core-3.3.0.jar
-file.reference.javase-3.3.0.jar-1=dist\\lib\\javase-3.3.0.jar
-file.reference.javase-3.3.0.jar-2=C:\\Users\\Brenedin Enrique\\Desktop\\Periodo1_2021\\Dise\u00f1oSistemas\\lib\\javase-3.3.0.jar
-file.reference.jcalendar-1.4.jar=C:\\Users\\Arnold\\Desktop\\jar nuevos\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
-file.reference.jcalendar-1.4.jar-1=C:\\Users\\Sergio\\Desktop\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
-file.reference.jcalendar-1.4.jar-2=C:\\Users\\Brenedin Enrique\\Desktop\\Periodo1_2021\\Dise\u00f1oSistemas\\lib\\jcalendar-1.4.jar
-file.reference.jcalendar-1.4.jar-3=D:\\Documents\\U\\Analisis_y_Diseno\\Proyecto\\jcalendar-1.4\\lib\\jcalendar-1.4.jar
-file.reference.jgoodies-common-1.2.0.jar=C:\\Users\\Sergio\\Desktop\\jcalendar-1.4\\lib\\jgoodies-common-1.2.0.jar
-file.reference.jgoodies-common-1.2.0.jar-1=C:\\Users\\Brenedin Enrique\\Desktop\\Periodo1_2021\\Dise\u00f1oSistemas\\lib\\jgoodies-common-1.2.0.jar
-file.reference.jgoodies-common-1.2.0.jar-2=D:\\Documents\\U\\Analisis_y_Diseno\\Proyecto\\jcalendar-1.4\\lib\\jgoodies-common-1.2.0.jar
-file.reference.jgoodies-looks-2.4.1.jar=C:\\Users\\Sergio\\Desktop\\jcalendar-1.4\\lib\\jgoodies-looks-2.4.1.jar
-file.reference.jgoodies-looks-2.4.1.jar-1=C:\\Users\\Brenedin Enrique\\Desktop\\Periodo1_2021\\Dise\u00f1oSistemas\\lib\\jgoodies-looks-2.4.1.jar
-file.reference.jgoodies-looks-2.4.1.jar-2=D:\\Documents\\U\\Analisis_y_Diseno\\Proyecto\\jcalendar-1.4\\lib\\jgoodies-looks-2.4.1.jar
-file.reference.junit-4.12.jar-1=dist\\lib\\junit-4.12.jar
-file.reference.junit-4.12.jar-2=C:\\Users\\Brenedin Enrique\\Desktop\\Periodo1_2021\\Dise\u00f1oSistemas\\lib\\junit-4.12.jar
-file.reference.junit-4.6.jar=C:\\Users\\Sergio\\Desktop\\jcalendar-1.4\\lib\\junit-4.6.jar
-file.reference.junit-4.6.jar-1=C:\\Users\\Brenedin Enrique\\Desktop\\Periodo1_2021\\Dise\u00f1oSistemas\\lib\\junit-4.6.jar
-file.reference.junit-4.6.jar-2=D:\\Documents\\U\\Analisis_y_Diseno\\Proyecto\\jcalendar-1.4\\lib\\junit-4.6.jar
-file.reference.libreria_sql.jar-1=dist\\lib\\libreria_sql.jar
-file.reference.libreria_sql.jar-2=C:\\Users\\Brenedin Enrique\\Desktop\\Periodo1_2021\\Dise\u00f1oSistemas\\lib\\libreria_sql.jar
-file.reference.log4j-1.2.17.jar-1=dist\\lib\\log4j-1.2.17.jar
-file.reference.log4j-1.2.17.jar-2=C:\\Users\\Brenedin Enrique\\Desktop\\Periodo1_2021\\Dise\u00f1oSistemas\\lib\\log4j-1.2.17.jar
-file.reference.mail-1.5.0-b01.jar-1=dist\\lib\\mail-1.5.0-b01.jar
-file.reference.mail-1.5.0-b01.jar-2=C:\\Users\\Brenedin Enrique\\Desktop\\Periodo1_2021\\Dise\u00f1oSistemas\\lib\\mail-1.5.0-b01.jar
-file.reference.poi-3.16.jar=C:\\Users\\Brenedin Enrique\\Desktop\\Periodo1_2021\\Dise\u00f1oSistemas\\lib\\poi-3.16.jar
-file.reference.poi-3.16.jar-1=dist\\lib\\poi-3.16.jar
-file.reference.poi-3.16.jar-2=C:\\Users\\Arnold\\Documents\\NetBeansProjects\\proyecto_fin\\dist\\lib\\poi-3.16.jar
-file.reference.poi-5.0.0.jar=C:\\Users\\Arnold\\Desktop\\poi-5.0.0.jar
-file.reference.poi-ooxml-3.16.jar=C:\\Users\\Brenedin Enrique\\Desktop\\Periodo1_2021\\Dise\u00f1oSistemas\\lib\\poi-ooxml-3.16.jar
-file.reference.poi-ooxml-3.16.jar-1=dist\\lib\\poi-ooxml-3.16.jar
-file.reference.poi-ooxml-3.16.jar-2=C:\\Users\\Arnold\\Documents\\NetBeansProjects\\proyecto_fin\\dist\\lib\\poi-ooxml-3.16.jar
-file.reference.poi-ooxml-5.0.0.jar=C:\\Users\\Arnold\\Desktop\\poi-ooxml-5.0.0.jar
-file.reference.poi-ooxml-full-5.0.0.jar=C:\\Users\\Arnold\\Desktop\\poi-ooxml-full-5.0.0.jar
-file.reference.poi-ooxml-schemas-3.16.jar=C:\\Users\\Brenedin Enrique\\Desktop\\Periodo1_2021\\Dise\u00f1oSistemas\\lib\\poi-ooxml-schemas-3.16.jar
-file.reference.poi-ooxml-schemas-3.16.jar-1=dist\\lib\\poi-ooxml-schemas-3.16.jar
-file.reference.poi-ooxml-schemas-3.16.jar-2=C:\\Users\\Arnold\\Documents\\NetBeansProjects\\proyecto_fin\\dist\\lib\\poi-ooxml-schemas-3.16.jar
-file.reference.slf4j-api-1.6.2.jar-1=dist\\lib\\slf4j-api-1.6.2.jar
-file.reference.slf4j-api-1.6.2.jar-2=C:\\Users\\Brenedin Enrique\\Desktop\\Periodo1_2021\\Dise\u00f1oSistemas\\lib\\slf4j-api-1.6.2.jar
-file.reference.slf4j-log4j12-1.6.2.jar-1=dist\\lib\\slf4j-log4j12-1.6.2.jar
-file.reference.slf4j-log4j12-1.6.2.jar-2=C:\\Users\\Brenedin Enrique\\Desktop\\Periodo1_2021\\Dise\u00f1oSistemas\\lib\\slf4j-log4j12-1.6.2.jar
-file.reference.sqlite-jdbc-3.7.2.jar-1=dist\\lib\\sqlite-jdbc-3.7.2.jar
-file.reference.sqlite-jdbc-3.7.2.jar-2=C:\\Users\\Brenedin Enrique\\Desktop\\Periodo1_2021\\Dise\u00f1oSistemas\\lib\\sqlite-jdbc-3.7.2.jar
-file.reference.webcam-capture-0.3.12.jar-1=dist\\lib\\webcam-capture-0.3.12.jar
-file.reference.webcam-capture-0.3.12.jar-2=C:\\Users\\Brenedin Enrique\\Desktop\\Periodo1_2021\\Dise\u00f1oSistemas\\lib\\webcam-capture-0.3.12.jar
-file.reference.xmlbeans-2.6.0.jar=C:\\Users\\Brenedin Enrique\\Desktop\\Periodo1_2021\\Dise\u00f1oSistemas\\lib\\xmlbeans-2.6.0.jar
-file.reference.xmlbeans-2.6.0.jar-1=dist\\lib\\xmlbeans-2.6.0.jar
-file.reference.xmlbeans-2.6.0.jar-2=C:\\Users\\Arnold\\Documents\\NetBeansProjects\\proyecto_fin\\dist\\lib\\xmlbeans-2.6.0.jar
-file.reference.xmlbeans-4.0.0.jar=C:\\Users\\Arnold\\Desktop\\xmlbeans-4.0.0.jar
+file.reference.AbsoluteLayout.jar=C:\\librerias\\AbsoluteLayout.jar
+file.reference.asistenteCorreo.jar=C:\\librerias\\asistenteCorreo.jar
+file.reference.bridj-0.6.2-windows-only.jar=C:\\librerias\\bridj-0.6.2-windows-only.jar
+file.reference.commons-collections4-4.4.jar=C:\\librerias\\commons-collections4-4.4.jar
+file.reference.commons-compress-1.20.jar=C:\\librerias\\commons-compress-1.20.jar
+file.reference.core-3.3.0.jar=C:\\librerias\\core-3.3.0.jar
+file.reference.javase-3.3.0.jar=C:\\librerias\\javase-3.3.0.jar
+file.reference.jcalendar-1.4.jar=C:\\librerias\\jcalendar-1.4.jar
+file.reference.jgoodies-common-1.2.0.jar=C:\\librerias\\jgoodies-common-1.2.0.jar
+file.reference.jgoodies-looks-2.4.1.jar=C:\\librerias\\jgoodies-looks-2.4.1.jar
+file.reference.junit-4.12.jar=C:\\librerias\\junit-4.12.jar
+file.reference.junit-4.6.jar=C:\\librerias\\junit-4.6.jar
+file.reference.libreria_sql.jar=C:\\librerias\\libreria_sql.jar
+file.reference.log4j-1.2.17.jar=C:\\librerias\\log4j-1.2.17.jar
+file.reference.mail-1.5.0-b01.jar=C:\\librerias\\mail-1.5.0-b01.jar
+file.reference.poi-5.0.0.jar=C:\\librerias\\poi-5.0.0.jar
+file.reference.poi-ooxml-5.0.0.jar=C:\\librerias\\poi-ooxml-5.0.0.jar
+file.reference.poi-ooxml-full-5.0.0.jar=C:\\librerias\\poi-ooxml-full-5.0.0.jar
+file.reference.slf4j-api-1.6.2.jar=C:\\librerias\\slf4j-api-1.6.2.jar
+file.reference.slf4j-log4j12-1.6.2.jar=C:\\librerias\\slf4j-log4j12-1.6.2.jar
+file.reference.sqlite-jdbc-3.7.2.jar=C:\\librerias\\sqlite-jdbc-3.7.2.jar
+file.reference.webcam-capture-0.3.12.jar=C:\\librerias\\webcam-capture-0.3.12.jar
+file.reference.xmlbeans-4.0.0.jar=C:\\librerias\\xmlbeans-4.0.0.jar
 #Thu May 21 19:38:23 CST 2020
 javadoc.splitindex=true
 build.classes.excludes=**/*.java,**/*.form
@@ -101,66 +64,29 @@ main.class=Login
 dist.javadoc.dir=${dist.dir}/javadoc
 javadoc.additionalparam=
 javac.classpath=\
-    ${file.reference.AbsoluteLayout.jar-1}:\
-    ${file.reference.asistenteCorreo.jar-1}:\
-    ${file.reference.bridj-0.6.2-windows-only.jar-1}:\
-    ${file.reference.commons-collections4-4.1.jar-1}:\
-    ${file.reference.core-3.3.0.jar-1}:\
-    ${file.reference.javase-3.3.0.jar-1}:\
-    ${file.reference.junit-4.12.jar-1}:\
-    ${file.reference.libreria_sql.jar-1}:\
-    ${file.reference.log4j-1.2.17.jar-1}:\
-    ${file.reference.mail-1.5.0-b01.jar-1}:\
-    ${file.reference.poi-3.16.jar-1}:\
-    ${file.reference.poi-ooxml-3.16.jar-1}:\
-    ${file.reference.poi-ooxml-schemas-3.16.jar-1}:\
-    ${file.reference.slf4j-api-1.6.2.jar-1}:\
-    ${file.reference.slf4j-log4j12-1.6.2.jar-1}:\
-    ${file.reference.sqlite-jdbc-3.7.2.jar-1}:\
-    ${file.reference.webcam-capture-0.3.12.jar-1}:\
-    ${file.reference.xmlbeans-2.6.0.jar-1}:\
+    ${file.reference.AbsoluteLayout.jar}:\
+    ${file.reference.asistenteCorreo.jar}:\
+    ${file.reference.bridj-0.6.2-windows-only.jar}:\
     ${file.reference.commons-collections4-4.4.jar}:\
     ${file.reference.commons-compress-1.20.jar}:\
+    ${file.reference.core-3.3.0.jar}:\
+    ${file.reference.javase-3.3.0.jar}:\
+    ${file.reference.jcalendar-1.4.jar}:\
+    ${file.reference.jgoodies-common-1.2.0.jar}:\
+    ${file.reference.jgoodies-looks-2.4.1.jar}:\
+    ${file.reference.junit-4.12.jar}:\
+    ${file.reference.junit-4.6.jar}:\
+    ${file.reference.libreria_sql.jar}:\
+    ${file.reference.log4j-1.2.17.jar}:\
+    ${file.reference.mail-1.5.0-b01.jar}:\
     ${file.reference.poi-5.0.0.jar}:\
     ${file.reference.poi-ooxml-5.0.0.jar}:\
     ${file.reference.poi-ooxml-full-5.0.0.jar}:\
-    ${file.reference.xmlbeans-4.0.0.jar}:\
-    ${file.reference.jcalendar-1.4.jar}:\
-    ${file.reference.jcalendar-1.4.jar-1}:\
-    ${file.reference.jgoodies-common-1.2.0.jar}:\
-    ${file.reference.jgoodies-looks-2.4.1.jar}:\
-    ${file.reference.junit-4.6.jar}:\
-    ${file.reference.AbsoluteLayout.jar-2}:\
-    ${file.reference.asistenteCorreo.jar-2}:\
-    ${file.reference.bridj-0.6.2-windows-only.jar-2}:\
-    ${file.reference.commons-collections4-4.1.jar}:\
-    ${file.reference.core-3.3.0.jar-2}:\
-    ${file.reference.javase-3.3.0.jar-2}:\
-    ${file.reference.junit-4.12.jar-2}:\
-    ${file.reference.libreria_sql.jar-2}:\
-    ${file.reference.log4j-1.2.17.jar-2}:\
-    ${file.reference.mail-1.5.0-b01.jar-2}:\
-    ${file.reference.poi-3.16.jar}:\
-    ${file.reference.poi-ooxml-3.16.jar}:\
-    ${file.reference.poi-ooxml-schemas-3.16.jar}:\
-    ${file.reference.slf4j-api-1.6.2.jar-2}:\
-    ${file.reference.slf4j-log4j12-1.6.2.jar-2}:\
-    ${file.reference.sqlite-jdbc-3.7.2.jar-2}:\
-    ${file.reference.webcam-capture-0.3.12.jar-2}:\
-    ${file.reference.xmlbeans-2.6.0.jar}:\
-    ${file.reference.jcalendar-1.4.jar-2}:\
-    ${file.reference.jgoodies-common-1.2.0.jar-1}:\
-    ${file.reference.jgoodies-looks-2.4.1.jar-1}:\
-    ${file.reference.junit-4.6.jar-1}:\
-    ${file.reference.commons-collections4-4.1.jar-2}:\
-    ${file.reference.poi-3.16.jar-2}:\
-    ${file.reference.poi-ooxml-3.16.jar-2}:\
-    ${file.reference.poi-ooxml-schemas-3.16.jar-2}:\
-    ${file.reference.xmlbeans-2.6.0.jar-2}:\
-    ${file.reference.jcalendar-1.4.jar-3}:\
-    ${file.reference.jgoodies-common-1.2.0.jar-2}:\
-    ${file.reference.jgoodies-looks-2.4.1.jar-2}:\
-    ${file.reference.junit-4.6.jar-2}
+    ${file.reference.slf4j-api-1.6.2.jar}:\
+    ${file.reference.slf4j-log4j12-1.6.2.jar}:\
+    ${file.reference.sqlite-jdbc-3.7.2.jar}:\
+    ${file.reference.webcam-capture-0.3.12.jar}:\
+    ${file.reference.xmlbeans-4.0.0.jar}
 javadoc.noindex=false
 annotation.processing.enabled.in.editor=false
 javadoc.private=false
